# server/internal/genapi/oas_response_encoders_gen.go
@@ -100,6 +100,19 @@ func encodeGetDiffResponse(response []WordEdit, w http.ResponseWriter, span trac
 	return nil
 }
 
+func encodeGetFleetResponse(response *FleetState, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetHealthResponse(response *Health, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
